...
                if vm.selectedCountry != nil {
                    destinationReportView
                } else {
                    searchView
                }
            }
            .navigationTitle("Travel")
            .toolbar {
                if vm.selectedCountry != nil {
                    ToolbarItem(placement: .topBarLeading) {
                        Button {
                            withAnimation { vm.selectedCountry = nil; vm.searchText = "" }
                        } label: {
...
